--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Template</title>
+ <title>Picture in Picture</title>
  <!-- For the Web Page Icon -->
  <link rel="icon" type="image/png" href="favicon-32x32.png">
 
  <!-- End of the Web Page Icon -->
-
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-  integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+ <!-- video -->
+ <video src="" id="video" height="360" width="640" hidden></video>
+ <!-- Button -->
+ <div class="button-container">
+  <button id="button">
+   START
+  </button>
+ </div>
  <!-- Script -->
  <script src="script.js"></script>
 </body>
